# inotify_simple

./: .gitignore  MANIFEST.in  README  README.md  README.rst  example.py  inotify_simple.py  pyproject.toml  readthedocs.yaml  setup.py  test_inotify.py
.github/: FUNDING.yml
.github/workflows/: release.yml
doc/: .gitignore  Makefile  conf.py  fullsource.py  index.rst  requirements.txt
docs/: Makefile  conf.py  index.rst
inotify_simple/: .gitignore  __init__.py  inotify_simple.py
tests/: __init__.py  test_close.py  test_concurrency.py  test_simple.py
